; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_i386obsd-tdep.c_i386obsd_aout_init_abi.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_i386obsd-tdep.c_i386obsd_aout_init_abi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gdbarch = type { i32 }
%struct.gdbarch_info = type { i32 }

@i386obsd_aout_regset_from_core_section = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.gdbarch*)* @i386obsd_aout_init_abi to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @i386obsd_aout_init_abi(i32 %0, %struct.gdbarch* %1) #0 {
  %3 = alloca %struct.gdbarch_info, align 4
  %4 = alloca %struct.gdbarch*, align 8
  %5 = getelementptr inbounds %struct.gdbarch_info, %struct.gdbarch_info* %3, i32 0, i32 0
  store i32 %0, i32* %5, align 4
  store %struct.gdbarch* %1, %struct.gdbarch** %4, align 8
  %6 = load %struct.gdbarch*, %struct.gdbarch** %4, align 8
  %7 = getelementptr inbounds %struct.gdbarch_info, %struct.gdbarch_info* %3, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @i386obsd_init_abi(i32 %8, %struct.gdbarch* %6)
  %10 = load %struct.gdbarch*, %struct.gdbarch** %4, align 8
  %11 = load i32, i32* @i386obsd_aout_regset_from_core_section, align 4
  %12 = call i32 @set_gdbarch_regset_from_core_section(%struct.gdbarch* %10, i32 %11)
  ret void
}

declare dso_local i32 @i386obsd_init_abi(i32, %struct.gdbarch*) #1

declare dso_local i32 @set_gdbarch_regset_from_core_section(%struct.gdbarch*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
